secondfile/objects/Mobility_Fan__c.object
<CustomObject>
    <fields>
        <fullName>Agreement_ID__c</fullName>
        <label>Agreement ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Cycle_Date__c</fullName>
        <label>Bill Cycle Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fan_Account_Profile_Name__c</fullName>
        <label>Fan Account Profile Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fan_ID__c</fullName>
        <label>Fan ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fan_Liability_Type__c</fullName>
        <label>Fan Liability Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fan_Service_Discount__c</fullName>
        <label>Fan Service Discount</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Mobility Fans</relationshipLabel>
        <relationshipName>Mobility_Fans</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Mobility Fan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MFN-{0000}</displayFormat>
        <label>Mobility Fan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mobility Fans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>